# ext

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
docs/: Doxyfile
examples/: CMakeLists.txt  README.md
examples/message_id/: CMakeLists.txt  main.cpp
include/ext/: base_types.hpp  exceptions.hpp  ext.hpp  fixed_string.hpp  holder.hpp  ignore.hpp  maybe.hpp  none.hpp  option.hpp  platform.hpp  reference.hpp  result.hpp  tuple.hpp  type_holder.hpp  type_list.hpp  value_wrapper.hpp
include/ext/detail/: common.hpp  doxygen.hpp  fixed_string.hpp  indexed.hpp  option_base.hpp  type_list_ops.hpp  value_wrapper.hpp
include/ext/detail/result/: result_copy_constructor.hpp  result_move_constructor.hpp  result_storage.hpp
include/ext/impl/: exceptions.ipp
src/: CMakeLists.txt  exceptions.cpp
src/ext/: ext.cpp
tests/include/ext/: utility_classes.hpp
tests/src/: CMakeLists.txt  holder.tests.cpp  main.cpp  maybe.tests.cpp  reference.tests.cpp  result.tests.cpp  tuple.tests.cpp
tests/src/ext/: fixed_string.test.cpp  option.test.cpp  result.test.cpp  type_list.test.cpp  value_wrapper.test.cpp
tools/cmake/: Config.cmake.in
